dconf-editor (3.27.91-1) UNRELEASED; urgency=medium

  * New upstream development release (Closes: #704164)

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 19 Feb 2018 14:54:14 -0500

dconf-editor (3.26.2-3) unstable; urgency=medium

  * Update Vcs fields for migration to https://salsa.debian.org/
  * Bump debhelper compat to 11

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 02 Feb 2018 08:12:48 -0500

dconf-editor (3.26.2-2) unstable; urgency=medium

  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2

 -- Jeremy Bicha <jbicha@debian.org>  Wed, 13 Dec 2017 19:56:58 -0500

dconf-editor (3.26.2-1) unstable; urgency=medium

  * New upstream release (LP: #1729108)

 -- Jeremy Bicha <jbicha@debian.org>  Tue, 31 Oct 2017 20:28:53 -0400

dconf-editor (3.26.1-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in:
    - Drop obsolete Build-Depends on intltool
  * Bump Standards-Version to 4.1.1

 -- Jeremy Bicha <jbicha@debian.org>  Mon, 02 Oct 2017 11:44:19 -0400

dconf-editor (3.22.3-1) unstable; urgency=medium

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 16 Jan 2017 19:50:39 +0100

dconf-editor (3.22.1-1) unstable; urgency=medium

  * New upstream release.
  * Drop dh_install override. The use of --list-missing is not useful with
    only a single binary package.

 -- Michael Biebl <biebl@debian.org>  Tue, 11 Oct 2016 17:19:47 +0200

dconf-editor (3.22.0-1) unstable; urgency=medium

  * New upstream release.
  * Update Build-Depends as per configure.ac:
    - Bump valac to (>= 0.33.1).
    - Bump libgtk-3-dev to (>= 3.21.6).

 -- Michael Biebl <biebl@debian.org>  Wed, 21 Sep 2016 12:32:44 +0200

dconf-editor (3.21.90-2) unstable; urgency=medium

  * Upload to unstable.
  * Bump debhelper compat level to 10.

 -- Michael Biebl <biebl@debian.org>  Tue, 13 Sep 2016 16:59:10 +0200

dconf-editor (3.21.90-1) experimental; urgency=medium

  * New upstream release.