@@ -3,8 +3,9 @@ Section: utils
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: debhelper (>= 11),
+Build-Depends: debhelper (>= 11.1.3),
                gnome-pkg-tools (>= 0.10),
+               meson (>= 0.41.0),
                appstream-util,
                valac (>= 0.33.1),
                libdconf-dev (>= 0.25.1),
